Refactor Service Code